// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Text props testing checkGrammar=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkGrammar=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkHighlight=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkHighlight={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing checkSpaces=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing className="my-classname" 1`] = `
<span
  className="uublocklayout-1mchdn4 my-classname uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="brown" 1`] = `
<span
  className="color-schema-brown uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="brown-rich" 1`] = `
<span
  className="color-schema-brown-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="cyan" 1`] = `
<span
  className="color-schema-cyan uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="cyan-rich" 1`] = `
<span
  className="color-schema-cyan-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="default" 1`] = `
<span
  className="color-schema-default uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="green" 1`] = `
<span
  className="color-schema-green uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="green-rich" 1`] = `
<span
  className="color-schema-green-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="grey" 1`] = `
<span
  className="color-schema-grey uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="grey-rich" 1`] = `
<span
  className="color-schema-grey-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="orange" 1`] = `
<span
  className="color-schema-orange uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="orange-rich" 1`] = `
<span
  className="color-schema-orange-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="pink" 1`] = `
<span
  className="color-schema-pink uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="pink-rich" 1`] = `
<span
  className="color-schema-pink-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="purple" 1`] = `
<span
  className="color-schema-purple uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="purple-rich" 1`] = `
<span
  className="color-schema-purple-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="red" 1`] = `
<span
  className="color-schema-red uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="red-rich" 1`] = `
<span
  className="color-schema-red-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="yellow" 1`] = `
<span
  className="color-schema-yellow uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing colorSchema="yellow-rich" 1`] = `
<span
  className="color-schema-yellow-rich uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing content="This is Content from ContentMixin" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing content=12345 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing controlled=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing default props 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing disabled=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-disabled uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing dynamic=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing hidden=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-hidden uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon="mdi-email" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    className="uublocklayout-1fogjmv"
    icon="mdi-email"
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon="mdi-phone" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    className="uublocklayout-1fogjmv"
    icon="mdi-phone"
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing icon=undefined 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing id="myId" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="myId"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing ignoreHTML=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing mainAttrs=undefined 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing name="myName" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="bigBox" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="box" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="boxCollection" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="container" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="inline" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="page" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="smallBox" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing nestingLevel="spa" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing noIndex=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-noindex uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing pureRender=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing selected=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-selected uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size="m" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing size="s" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz uublocklayout-blivtv"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector=false 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={false}
    checkHighlight={false}
    checkSpaces={false}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing textCorrector=true 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    checkGrammar={true}
    checkHighlight={true}
    checkSpaces={true}
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing tooltip="My Tooltip" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight="normal" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1ardydz"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight="primary" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-1s5xk6s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;

exports[`UU5.BlockLayout.Text props testing weight="secondary" 1`] = `
<span
  className="uublocklayout-1mchdn4 uu5-common-text uublocklayout-fhqrnx"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Test"
  />
</span>
`;
